samples/_failures_safe/1761703013_7c9085_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_073ff6f5.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_073ff6f5.c:152:5: error: expected declaration or statement at end of input
  152 |     }
      |     ^
